task-1/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-versioned-image
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Using the latest image tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
