task-1/policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
     - name: require-run-as-non-root
       match:
        any:
          - resources:
              kinds:
                - Pod
       exclude:
        any:
          - resources:
              namespaces:
                - argocd
       validate:
        message: "Containers must run as non-root."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
